<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="action_history">History</string>
    <string name="previous">Go Back</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="enter_weight">Enter weight</string>
    <string name="height_centimeters">Height (centimeters)</string>
    <string name="enter_height">Enter height</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="bmi_result">BMI Result: %s</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="height_inches">Height (inches)</string>
    <string name="history">History</string>
    <string name="clear_history">Clear History</string>
    <string name="enter_both">Please enter both weight and height.</string>
    <string name="must_be_positive">Weight and height must be positive.</string>
    <string name="imperial_metrics">Imperial Metrics</string>
    <string name="european_metrics">European Metrics</string>
    <string name="underweight_desc">Individuals with a BMI below 18.5 are considered underweight. This category typically indicates that a person\'s body weight is lower than what is considered healthy for their height. Underweight individuals may have insufficient body fat and muscle mass, which can be associated with a range of health concerns, including weakened immune system, nutrient deficiencies, and a higher risk of osteoporosis. It\'s important for underweight individuals to consult with a healthcare professional to address any underlying causes and develop a healthy plan for weight gain.</string>
    <string name="overweight_desc">Overweight individuals have a BMI in the range of 25 to 29.9. This category signifies that a person\'s body weight is higher than what is considered healthy for their height. Being overweight is often associated with an increased risk of various health problems, such as heart disease, diabetes, high blood pressure, and joint issues. Maintaining a balanced diet and regular physical activity can help overweight individuals manage their weight and reduce the associated health risks.</string>
    <string name="obese_desc">Obesity is characterized by a BMI of 30 or higher. This category indicates that a person\'s body weight is significantly above the healthy range for their height. Obesity is a serious health condition associated with a higher risk of numerous health issues, including heart disease, stroke, type 2 diabetes, certain cancers, sleep apnea, and more. Managing obesity often requires comprehensive lifestyle changes, including a well-balanced diet, increased physical activity, and, in some cases, medical intervention or weight loss surgery.</string>
    <string name="normal_desc">Normal weight individuals have a BMI within the range of 18.5 to 24.9, which is considered to be the optimal weight category for overall health and well-being. People in this category typically have a healthy balance of body fat and muscle mass. They are at a lower risk of weight-related health conditions such as heart disease, diabetes, and joint problems. Maintaining a normal weight is often associated with good overall physical and mental health. It is important to note that while being within the normal weight range is a positive indicator of health, other factors like diet, exercise, and genetics also play a crucial role in one\'s overall well-being.</string>
    <string name="about_me">About Me</string>
    <string name="me_desc">I have been programming since I was 14. However, for a year now, I have been intensively developing my skills and taking part in various projects. Now, I am actively increasing my React and Next.js skills.</string>
</resources>